--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                      <!-- Resent Button -->
                         <button id="resendBtn" type="submit" class="resend-btn btn mb-4 mx-auto d-block">Resend</button>
 
-                    <!-- Create Account Link -->
+                    <!-- Login Account Link -->
                     <div class="auth-login-account fw-normal text-muted text-center">
-                        Remember your password? <a href="index.html" class="text-primary fw-bold text-decoration-none ms-1">Sign In</a>
+                        Remember your password? <a href="https://mudassir3758.github.io/Login_form/" class="text-primary fw-bold text-decoration-none ms-1">Sign In</a>
                     </div>
 
                 </div>
@@ -106,3 +106,4 @@
 </body>
 
 </html>
+
